<resources>
    <string name="app_name">Tutors</string>
    <string name="welcome_professional_tutor">Welcome \n Professional Tutor</string>
    <string name="login_your_account">Log in your account</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="moblie_number">Mobile Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="password">Password</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="verify">Verify</string>
    <string name="teacher">Teacher</string>
    <string name="book_shops">Book Shops</string>
    <string name="quran_teacher">Quran Teacher</string>
    <string name="academy_institution">Academy \n Institution</string>
    <string name="user_account">User Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="new_to_this_app">New To This App...</string>
    <string name="sigmup"> Sign Up</string>
    <string name="or">Or</string>
    <string name="professional_tutor">Professional Tutor</string>
    <string name="professional_home_tutor">Professional Home Tutor</string>
    <string name="to_get_access_to_biggest_">To get access to biggest platform of \n Home online tuition, academy institution \n We need little information to get start</string>
    <string name="you_are">You are</string>
    <string name="full_name">Full Name</string>
    <string name="upload_your_picture">Upload Your Picture</string>
    <string name="age_as_per_cnic">Date of birth</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="city">
        <item>Select City</item>
        <item>Islamabad</item>
        <item>Rawalpindi</item>
        <item>Lahore</item>
        <item>Multan</item>
    </string-array>
    <string name="add_account_details">Add Account Details</string>
    <string name="contact_details">Alternative Contact Details</string>
    <string name="add_current_location_for_distance_reverence">Add Current Location For Distance Reference</string>
    <string name="add_location_distance_reference">Add Location (Distance Reverence)</string>
    <string name="save_Changes">Save Changes</string>
    <string name="save">Save</string>
    <string name="student_parent_forum">Student Parent Forum</string>
    <string name="search_result_teacher">Search result teacher</string>
    <string name="student_name">Student Name</string>
    <string name="online_home_tutor_institition_">Online Home Tutor Institition / Academy</string>
    <string name="level_and_subject">level And Subject</string>
    <string name="add_more_subjects">Add More Subjects</string>
    <string name="teacher_required_for">Teacher Required For</string>
    <string name="select_city">Select City</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="no_of_days_in_week">No of Days In Week</string>
    <string name="teaching_time">Teaching Time</string>
    <string name="tentative_month_tuition_required">Tentative Month Tuition Required</string>
    <string name="fee_range">Fee Range</string>
    <string name="search">Search</string>
    <string name="search_tutor_here">Search Tutor here...</string>
    <string name="what_categories_do_your">What categories your institution teaches?</string>
    <string name="icon">icon</string>
    <string name="fee">Fee</string>
    <string name="qualification">Qualification</string>
    <string name="distance">Distance</string>
    <string name="address">Address</string>
    <string name="course">Course</string>
    <string name="skip">Skip</string>
    <string name="proceed">Proceed</string>
    <string name="instition_academy_nearby_you">Instition / Academy Nearby You Conducting Your Subject Class</string>
    <string name="academy_institution_nearby_you">Academy / Instition / School Nearby You </string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="search_by_city">Search By City</string>
    <string name="search_by_subject">Search By Subject</string>
    <string name="home">Home</string>
    <string name="tutor">Tutor</string>
    <string name="branch_code">Branch Code</string>
    <string name="account_number">Account Number</string>
    <string name="account_title">Account Title</string>
    <string name="favorite">Favorite</string>
    <string name="account_details">Bank/Mobile Account Details</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_type">Bank Type</string>
    <string name="add_your_requirement">Add Your Requirement</string>
    <string name="add_your_requirement2">Add Your Requirement...</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="educational_details">Educational Details</string>
    <string name="add_from_lower_level">Add From Lower Level</string>
    <string name="upload_cnic_back">Upload CNIC back</string>
    <string name="upload_your_final_degree_certificate">Upload Your Final Degree Certificate</string>
    <string name="what_category_do_you_teach">What Category Do You Teach?</string>
    <string name="experience">Experience</string>
    <string name="teaching_mode">Teaching Mode</string>
    <string name="online_id">Online Id (Skype, zoom...)</string>
    <string name="no_record_found">No Record Found</string>
    <string name="availability_status">Availability Status</string>
    <string name="add_availability_status">Add Availability Status</string>
    <string name="availability_in_week">Availability in Week</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="full_time_teacher">Full Time Teacher</string>
    <string name="part_time_teacher">Part Time Teacher</string>
    <string name="current_employment">Current Employment</string>
    <string name="per_hour_fee">Per Hour Fee</string>
    <string name="per_month_fee">Per Month Fee</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="preferred_area_you_want_to_teach">Preferred Area You Want To Teach</string>
    <string name="set_your_point_of_reference">Set Your Point of Reference</string>
    <string name="update_your_availability_status">Available time in day</string>
    <string name="available_time">Available Time</string>
    <string name="occupied">Occupied</string>
    <string name="available">Available</string>
    <string name="select_time">Select Time</string>
    <string name="text_user">User</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="description_icon">icon</string>
    <string name="edit_your_profile">Add Your Profile</string>
    <string name="owner_of_acadeny_details">Academy owner Personal information</string>
    <string name="profile_completion">Profile Completion</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city_of_work">City Of Work</string>
    <string name="current_address">Current Address</string>
    <string name="permanent_address">Parmanent Address (As Per CNIC)</string>
    <string name="upload_cnic_front">Upload CNIC Front</string>
    <string name="time0">7:00am-8:00am</string>
    <string name="time1">8:00am-9:00am</string>
    <string name="time2">9:00am-10:00am</string>
    <string name="time3">10:00am-11:00am</string>
    <string name="time4">11:00am-12:00pm</string>
    <string name="time5">12:00am-1:00pm</string>
    <string name="time6">1:00pm-2:00pm</string>
    <string name="time7">2:00pm-3:00pm</string>
    <string name="time8">3:00pm-4:00pm</string>
    <string name="time9">4:00pm-5:00pm</string>
    <string name="time10">5:00pm-6:00pm</string>
    <string name="time11">6:00pm-7:00pm</string>
    <string name="time12">7:00pm-8:00pm</string>
    <string name="time13">8:00pm-9:00pm</string>
    <string name="time14">9:00pm-10:00pm</string>
    <string name="time15">10:00pm-11:00pm</string>
    <string-array name="you_are_spinner_items">
        <item>Teacher</item>
        <item>Student</item>
        <item>Guardian</item>
        <item>Reference</item>
    </string-array>
    <string-array name="teacher_required_for_spinner_items">
        <item>Group of Students</item>
        <item>Single Student</item>
    </string-array>
    <string-array name="school_college_university_spinner_items">
        <item>School</item>
        <item>College</item>
        <item>University</item>
        <item>Institute</item>
        <item>Grade</item>
        <item>Other than</item>
    </string-array>
    <string-array name="teacher_education_spinner">
        <item>Educational Certificate</item>
        <item>Matric/ O Level</item>
        <item>Intermediate</item>
        <item>Graduation</item>
        <item>Institute</item>
        <item>Master</item>
        <item>Post Graduation</item>
        <item>PhD</item>
        <item>Language specialist</item>
        <item>Other</item>
    </string-array>
    <string-array name="current_employment_spinner_items">
        <item>Current Employment</item>
        <item>Govt employee</item>
        <item>Private sector</item>
        <item>Teacher/lecturer Govt</item>
        <item>Full time private teacher</item>
    </string-array>
    <string-array name="account_type_arr">
        <item>Bank Account</item>
        <item>Mobile  Account</item>
    </string-array>
    <string name="number_only">0123456789</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="facality_details">Faculity Details</string>
    <string name="add_your_scedule">Add Your Schedule</string>
    <string name="enter_cource_name">Enter cource name</string>
    <string name="online_class">Online Class</string>
    <string name="venue_if_course_is_schedule_at_someplace">Venue,If course is schedule at someplace</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="upload_teacher_picture">Upload teacher picture</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="no_s_of_classes_in_week">No\'s of classes in week</string>
    <string name="fee_subject">Fee/Subject</string>
    <string name="enter_teacher_name">Enter teacher name</string>
    <string name="enter_your_achievements">Enter your achievements</string>
    <string name="enter_subject_names">Enter Subject Names</string>
    <string name="enter_your_level">Enter your level</string>
    <string name="enter_your_subject">Enter your Subject</string>
    <string name="enter_your_qualification">Enter your qualification</string>
    <string name="book_shop_information">Book shop Information</string>
    <string name="your_shop_name">Your shop name</string>
    <string name="logo_of_shop">Logo of shop</string>
    <string name="picture_of_shop">Picture of shop</string>
    <string name="add_your_shop_location">Add your shop location</string>
    <string name="shop_address">Shop Address</string>
    <string name="shop_timings">Shop timings</string>
    <string name="contact_details_of_shop">Contact details of shop</string>
    <string name="add_more_shop_details">Add more shop details</string>
</resources>