<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/facality_details"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/teacherNameEd"
            style="@style/edittext_view_style"
            android:hint="@string/enter_teacher_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="30" />


        <EditText
            android:id="@+id/qualificationEd"
            style="@style/edittext_view_style"
            android:layout_marginTop="1dp"
            android:hint="@string/enter_your_qualification"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="30" />

        <EditText
            android:id="@+id/subjectNameEd"
            style="@style/edittext_view_style"
            android:layout_marginTop="1dp"
            android:hint="@string/enter_subject_names"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="30" />

        <TextView
            android:id="@+id/uploadTeacherPicTv"
            style="@style/text_view_style"
            android:layout_marginTop="1dp"
            android:hint="@string/upload_your_picture" />

        <EditText
            android:id="@+id/achievementsEd"
            style="@style/edittext_view_style"
            android:layout_marginTop="1dp"
            android:hint="@string/enter_your_achievements"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="30" />

        <Button
            android:id="@+id/saveBtn"
            style="@style/button_style"
            android:layout_marginTop="1dp"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>