<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_10sdp">


    <ImageView
        android:id="@+id/topIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/icon"
        android:src="@drawable/men"
        android:text="@string/what_categories_do_your"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_5sdp"
        android:layout_below="@+id/topIv"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/teaching_mode"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topIv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teachingModelRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:groupIndicator="@null"
        android:layout_below="@+id/topHeading"
        android:padding="@dimen/_2sdp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topHeading" />


    <Button
        android:id="@+id/saveBtn"
        style="@style/button_style"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_below="@+id/teachingModelRV"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teachingModelRV" />


</RelativeLayout>